# ai-trader

./: CLAUDE.md  README.md  mcp-config.json  pyproject.toml  pyrightconfig.json
cron/: daily_update.py  weekly_brief.py
obsidian/ai-trader/: watchlist.md
obsidian/ai-trader/templates/: earnings-prep-template.md  ticker-template.md  trade-journal-template.md
src/: __init__.py  cli.py  db.py  mcp_server.py
src/fetchers/: earnings.py  news.py  prices.py
src/signals/: __init__.py
